; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp_client.c_necp_update_all_clients.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp_client.c_necp_update_all_clients.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@necp_client_update_tcall = common dso_local global i32* null, align 8
@necp_timeout_microseconds = common dso_local global i32 0, align 4
@NSEC_PER_USEC = common dso_local global i32 0, align 4
@necp_timeout_leeway_microseconds = common dso_local global i32 0, align 4
@THREAD_CALL_DELAY_LEEWAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @necp_update_all_clients() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32*, i32** @necp_client_update_tcall, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  br label %18

6:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  store i32 0, i32* %2, align 4
  %7 = load i32, i32* @necp_timeout_microseconds, align 4
  %8 = load i32, i32* @NSEC_PER_USEC, align 4
  %9 = call i32 @clock_interval_to_deadline(i32 %7, i32 %8, i32* %1)
  %10 = load i32, i32* @necp_timeout_leeway_microseconds, align 4
  %11 = load i32, i32* @NSEC_PER_USEC, align 4
  %12 = call i32 @clock_interval_to_absolutetime_interval(i32 %10, i32 %11, i32* %2)
  %13 = load i32*, i32** @necp_client_update_tcall, align 8
  %14 = load i32, i32* %1, align 4
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* @THREAD_CALL_DELAY_LEEWAY, align 4
  %17 = call i32 @thread_call_enter_delayed_with_leeway(i32* %13, i32* null, i32 %14, i32 %15, i32 %16)
  br label %18

18:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @clock_interval_to_deadline(i32, i32, i32*) #1

declare dso_local i32 @clock_interval_to_absolutetime_interval(i32, i32, i32*) #1

declare dso_local i32 @thread_call_enter_delayed_with_leeway(i32*, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
